--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tours a estadios de fútbol argentinos para angloparlantes. Guías bilingües, grupos pequeños y acceso seguro.">
     <title>Viajecito | Stadium Tours</title>
-    <!--prueba de cambios-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <!-- ══ OVERLAY ══════════════════════════════════════════ -->
+    <div id="carrito-overlay"></div>
+
+    <!-- ══ PANEL CARRITO ════════════════════════════════════ -->
+    <aside id="carrito-panel" aria-label="Carrito de tours">
+        <div class="carrito-header">
+            <h3>Tu carrito</h3>
+            <button id="btn-cerrar-carrito" aria-label="Cerrar carrito">✕</button>
+        </div>
+        <div id="lista-carrito"></div>
+        <div class="carrito-footer">
+            <div class="carrito-total">
+                <span>Total estimado</span>
+                <span id="carrito-total-monto">USD 0</span>
+            </div>
+            <button id="btn-reservar">Reservar ahora</button>
+            <br><br>
+            <button id="btn-vaciar" class="btn-ghost" style="width:100%;text-align:center;cursor:pointer;">Vaciar carrito</button>
+        </div>
+    </aside>
+
+    <!-- ══ HEADER ════════════════════════════════════════════ -->
     <header class="header" id="inicio">
         <div class="menu container">
             <a href="#inicio" class="logo">Viajecito</a>
@@ -22,9 +43,14 @@
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#servicios">Servicios</a></li>
-                    <li><a href="#propiedades">Propiedades</a></li>
+                    <li><a href="#tours">Tours</a></li>
                     <li><a href="#testimonios">Testimonios</a></li>
                     <li><a href="#contacto">Contacto</a></li>
+                    <li>
+                        <button id="btn-nav-carrito" style="background:none;border:none;cursor:pointer;color:#FEFCFB;font-size:17px;padding:18px 12px;line-height:1;">
+                            🛒 <span id="carrito-contador" style="display:none;background:#B7975B;color:#09080D;border-radius:50%;padding:2px 7px;font-size:12px;font-weight:700;">0</span>
+                        </button>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -111,53 +137,66 @@
         </div>
     </section>
 
+    <!-- ══ TOURS — div en vez de button, data-id en cada tarjeta ══ -->
     <section class="properties" id="tours">
         <div class="container section-head">
             <p class="eyebrow">Nuestros tours</p>
             <h2>5 estadios, un solo clic</h2>
-            <p>Las imágenes son botones: tocá para reservar o pedir más info en inglés.</p>
+            <p>Agregá los tours que te interesan al carrito y reservamos todo junto.</p>
         </div>
+
         <div class="tour-grid">
-            <button class="tour-card" type="button" aria-label="Boca Juniors stadium tour" style="background-image: url('images/i2.jpg');">
+
+            <div class="tour-card" data-id="1" style="background-image: url('images/i2.jpg');">
                 <div class="tour-body">
                     <span class="badge">La Bombonera</span>
                     <h3>Barrio + museo + platea</h3>
                     <p>2.5 h • Caminito & estadio • Guía en inglés</p>
-                    <span class="tour-cta">Book tour</span>
+                    <button class="btn-add"    data-id="1">+ Agregar al carrito</button>
+                    <button class="btn-remove" data-id="1">✕ Quitar del carrito</button>
                 </div>
-            </button>
-            <button class="tour-card" type="button" aria-label="River Plate stadium tour" style="background-image: url('images/i3.jpg');">
+            </div>
+
+            <div class="tour-card" data-id="2" style="background-image: url('images/i3.jpg');">
                 <div class="tour-body">
                     <span class="badge">Monumental</span>
                     <h3>Museo + campo de juego</h3>
                     <p>2 h • Belgrano • Opcional entrenamiento si abre</p>
-                    <span class="tour-cta">Book tour</span>
+                    <button class="btn-add"    data-id="2">+ Agregar al carrito</button>
+                    <button class="btn-remove" data-id="2">✕ Quitar del carrito</button>
                 </div>
-            </button>
-            <button class="tour-card" type="button" aria-label="Racing stadium tour" style="background-image: url('images/i4.jpeg');">
+            </div>
+
+            <div class="tour-card" data-id="3" style="background-image: url('images/i4.jpeg');">
                 <div class="tour-body">
                     <span class="badge">Racing</span>
                     <h3>El Cilindro + Avellaneda</h3>
                     <p>2 h • Murales e historia • Inglés fluido</p>
-                    <span class="tour-cta">Book tour</span>
+                    <button class="btn-add"    data-id="3">+ Agregar al carrito</button>
+                    <button class="btn-remove" data-id="3">✕ Quitar del carrito</button>
                 </div>
-            </button>
-            <button class="tour-card" type="button" aria-label="Independiente stadium tour" style="background-image: url('images/i5.jpg');">
+            </div>
+
+            <div class="tour-card" data-id="4" style="background-image: url('images/i5.jpg');">
                 <div class="tour-body">
                     <span class="badge">Independiente</span>
                     <h3>Libertadores de América</h3>
                     <p>2 h • Museo + plateas • Relatos de copas</p>
-                    <span class="tour-cta">Book tour</span>
+                    <button class="btn-add"    data-id="4">+ Agregar al carrito</button>
+                    <button class="btn-remove" data-id="4">✕ Quitar del carrito</button>
                 </div>
-            </button>
-            <button class="tour-card" type="button" aria-label="San Lorenzo stadium tour" style="background-image: url('images/i6.jpeg');">
+            </div>
+
+            <div class="tour-card" data-id="5" style="background-image: url('images/i6.jpeg');">
                 <div class="tour-body">
                     <span class="badge">San Lorenzo</span>
                     <h3>Nuevo Gasómetro</h3>
                     <p>2 h • Barrio + tribunas • Guía bilingüe</p>
-                    <span class="tour-cta">Book tour</span>
+                    <button class="btn-add"    data-id="5">+ Agregar al carrito</button>
+                    <button class="btn-remove" data-id="5">✕ Quitar del carrito</button>
                 </div>
-            </button>
+            </div>
+
         </div>
     </section>
 
@@ -168,15 +207,15 @@
         </div>
         <div class="container testimonial-grid">
             <article class="testimonial-card">
-                <p>“Vendimos en 30 días, con fotos increíbles y visitas ordenadas. Nos ahorraron tiempo y preocupaciones.”</p>
+                <p>"Vendimos en 30 días, con fotos increíbles y visitas ordenadas. Nos ahorraron tiempo y preocupaciones."</p>
                 <span class="testimonial-name">Alex & Kim • Chicago</span>
             </article>
             <article class="testimonial-card">
-                <p>“Clear English, great pacing and safe spots. We learned a ton and ate amazing food.”</p>
+                <p>"Clear English, great pacing and safe spots. We learned a ton and ate amazing food."</p>
                 <span class="testimonial-name">Sarah • London</span>
             </article>
             <article class="testimonial-card">
-                <p>“Private tour felt personalized. They adapted to our kids and answered every question.”</p>
+                <p>"Private tour felt personalized. They adapted to our kids and answered every question."</p>
                 <span class="testimonial-name">Mark & family • New York</span>
             </article>
         </div>
@@ -188,13 +227,12 @@
                 <p class="eyebrow">Contacto</p>
                 <h2>Reservá tu tour</h2>
                 <form>
-                    <input class="campo" type="text" name="nombre" placeholder="Nombre" required>
-                    <input class="campo" type="email" name="email" placeholder="Correo" required>
-                    <textarea class="campo" name="mensaje" rows="5" placeholder="Fecha, cantidad de personas e idioma" required></textarea>
+                    <input class="campo" type="text"  name="nombre"  placeholder="Nombre" required>
+                    <input class="campo" type="email" name="email"   placeholder="Correo" required>
+                    <textarea class="campo" name="mensaje" rows="5" placeholder="Fecha, cantidad de personas e idioma"></textarea>
                     <input class="btn-2" type="submit" value="Enviar">
                 </form>
             </div>
-
             <div class="footer-text">
                 <h3>+54 9 11 2166-2059</h3>
                 <p>hello@viajecito.com</p>
@@ -203,11 +241,11 @@
                 <a class="btn-ghost inline" href="https://wa.me/5491121662059" target="_blank" rel="noopener">Escribir por WhatsApp</a>
             </div>
         </div>
-
         <div class="footer-2">
             <p>Tours claros, bilingües y seguros para que vivas Buenos Aires al máximo.</p>
         </div>
     </footer>
+
     <script type="module" src="java.js"></script>
 </body>
-</html>     
+</html>
